# gemini-starter-agent

./: .gitignore  LICENSE.md  README.md  setup.py
agent/: .env  pyproject.toml
agent/src/agent/agent/: main.py
gemini_starter_agent/: main.py
gemini_starter_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workflow/myagent/: .env  pyproject.toml
workflow/myagent/agent/: main.py
